@@ -145,8 +145,21 @@ rsvg_paint_server_lin_grad_render (RsvgPaintServer *self, ArtRender *ar,
 	RsvgLinearGradient *rlg = z->gradient;
 	ArtGradientLinear *agl;
 	double x1, y1, x2, y2;
+	double g_x1, g_y1, g_x2, g_y2;
 	double dx, dy, scale;
 	
+	g_x1 = rlg->x1;
+	g_x2 = rlg->x2;
+	g_y1 = rlg->y1;
+	g_y2 = rlg->y2;
+
+	if (rlg->obj_bbox == TRUE) {
+		g_x1 *= ar->x0;
+		g_x2 *= ar->x1;
+		g_y1 *= ar->y0;
+		g_y2 *= ar->y1;
+	}
+
 	agl = z->agl;
 	if (agl == NULL)
 		{
@@ -161,11 +174,10 @@ rsvg_paint_server_lin_grad_render (RsvgPaintServer *self, ArtRender *ar,
 		}
 	
 	/* compute [xy][12] in pixel space */
-	/* todo: this code implicitly implements gradientUnits = userSpace */
-	x1 = rlg->x1 * rlg->affine[0] + rlg->y1 * rlg->affine[2] + rlg->affine[4];
-	y1 = rlg->x1 * rlg->affine[1] + rlg->y1 * rlg->affine[3] + rlg->affine[5];
-	x2 = rlg->x2 * rlg->affine[0] + rlg->y2 * rlg->affine[2] + rlg->affine[4];
-	y2 = rlg->x2 * rlg->affine[1] + rlg->y2 * rlg->affine[3] + rlg->affine[5];
+	x1 = g_x1 * rlg->affine[0] + g_y1 * rlg->affine[2] + rlg->affine[4];
+	y1 = g_x1 * rlg->affine[1] + g_y1 * rlg->affine[3] + rlg->affine[5];
+	x2 = g_x2 * rlg->affine[0] + g_y2 * rlg->affine[2] + rlg->affine[4];
+	y2 = g_x2 * rlg->affine[1] + g_y2 * rlg->affine[3] + rlg->affine[5];
 	
 	/* solve a, b, c so ax1 + by1 + c = 0 and ax2 + by2 + c = 1, maximum
 	   gradient is in x1,y1 to x2,y2 dir */
@@ -215,6 +227,27 @@ rsvg_paint_server_rad_grad_render (RsvgPaintServer *self, ArtRender *ar,
 	ArtGradientRadial *agr;
 	double aff1[6], aff2[6];
 	
+	double r, cx, cy, fx, fy;
+
+	r  = rrg->r;
+	cx = rrg->cx;
+	cy = rrg->cy;
+	fx = rrg->fx;
+	fy = rrg->fy;
+
+	if (rrg->obj_bbox) {
+		/* http://www.w3.org/TR/SVG11/pservers.html#RadialGradientUnitsAttribute 
+		   not quite sure of the math needed here in order to make this happen
+		   relative to [ar->x0 ar->x1 ar->y0 ar->y1]
+		*/
+		/* todo: untested, known to be *quite* broken */
+		r  *= (((ar->x1 - ar->x0) + (ar->y1 - ar->y0)) / 2.);
+		cx *= ((ar->x1 - ar->x0));
+		cy *= ((ar->y1 - ar->y0));
+		fx *= ((ar->x1 - ar->x0));
+		fy *= ((ar->y1 - ar->y0));
+	}
+
 	agr = z->agr;
 	if (agr == NULL)
 		{
@@ -228,17 +261,16 @@ rsvg_paint_server_rad_grad_render (RsvgPaintServer *self, ArtRender *ar,
 			z->agr = agr;
 		}
 	
-	/* todo: this code implicitly implements gradientUnits = userSpace */
-	art_affine_scale (aff1, rrg->r, rrg->r);
-	art_affine_translate (aff2, rrg->cx, rrg->cy);
+	art_affine_scale (aff1, r, r);
+	art_affine_translate (aff2, cx, cy);
 	art_affine_multiply (aff1, aff1, aff2);
 	art_affine_multiply (aff1, aff1, rrg->affine);
 	art_affine_invert (agr->affine, aff1);
 	
-	/* TODO: libart doesn't support spreads on radial gradients */
+	/* todo: libart doesn't support spreads on radial gradients */
 
-	agr->fx = (rrg->fx - rrg->cx) / rrg->r;
-	agr->fy = (rrg->fy - rrg->cy) / rrg->r;
+	agr->fx = (fx - cx) / r;
+	agr->fy = (fy - cy) / r;
 	
 	art_render_gradient_radial (ar, agr, ART_FILTER_NEAREST);
 }
@@ -363,6 +395,7 @@ rsvg_clone_radial_gradient (const RsvgRadialGradient *grad, gboolean * shallow_c
 	clone->super.type = RSVG_DEF_RADGRAD;
 	clone->super.free = rsvg_radial_gradient_free;
 	
+	clone->obj_bbox = grad->obj_bbox;
 	for (i = 0; i < 6; i++)
 		clone->affine[i] = grad->affine[i];
 
@@ -373,13 +406,11 @@ rsvg_clone_radial_gradient (const RsvgRadialGradient *grad, gboolean * shallow_c
 	
 		for (i = 0; i < grad->stops->n_stop; i++)
 			clone->stops->stop[i] = grad->stops->stop[i];
-	} else {
-		clone->stops = NULL;
 	}
 
 	clone->spread = grad->spread;
 
-	/* EVIL EVIL - sodipodi can base LinearGradients on
+	/* EVIL EVIL - SVG can base LinearGradients on
 	   RadialGradients, and vice-versa. it is legal, though:
 	   http://www.w3.org/TR/SVG11/pservers.html#LinearGradients
 	*/
@@ -408,6 +439,7 @@ rsvg_clone_linear_gradient (const RsvgLinearGradient *grad, gboolean * shallow_c
 	clone->super.type = RSVG_DEF_LINGRAD;
 	clone->super.free = rsvg_linear_gradient_free;
 	
+	clone->obj_bbox = grad->obj_bbox;
 	for (i = 0; i < 6; i++)
 		clone->affine[i] = grad->affine[i];
 
@@ -418,13 +450,11 @@ rsvg_clone_linear_gradient (const RsvgLinearGradient *grad, gboolean * shallow_c
 		
 		for (i = 0; i < grad->stops->n_stop; i++)
 			clone->stops->stop[i] = grad->stops->stop[i];
-	} else {
-		clone->stops = NULL;
 	}
 
 	clone->spread = grad->spread;
 
-	/* EVIL EVIL - sodipodi can base LinearGradients on
+	/* EVIL EVIL - SVG can base LinearGradients on
 	   RadialGradients, and vice-versa. it is legal, though:
 	   http://www.w3.org/TR/SVG11/pservers.html#LinearGradients
 	*/
