@@ -403,10 +403,11 @@ rsvg_start_linear_gradient (RsvgHandle *ctx, const xmlChar **atts)
 	double x1 = 0., y1 = 0., x2 = 0., y2 = 0.;
 	ArtGradientSpread spread = ART_GRADIENT_PAD;
 	const char * xlink_href = NULL;
-	gboolean got_x1, got_x2, got_y1, got_y2, got_spread, got_transform, cloned, shallow_cloned;
+	gboolean obj_bbox = TRUE;
+	gboolean got_x1, got_x2, got_y1, got_y2, got_spread, got_transform, got_bbox, cloned, shallow_cloned;
 	double affine[6];
 
-	got_x1 = got_x2 = got_y1 = got_y2 = got_spread = got_transform = cloned = shallow_cloned = FALSE;
+	got_x1 = got_x2 = got_y1 = got_y2 = got_spread = got_transform = got_bbox = cloned = shallow_cloned = FALSE;
 	
 	/* 100% is the default */
 	x2 = rsvg_css_parse_normalized_length ("100%", ctx->dpi, (gdouble)ctx->width, state->font_size);
@@ -451,8 +452,11 @@ rsvg_start_linear_gradient (RsvgHandle *ctx, const xmlChar **atts)
 						}
 					else if (!strcmp ((char *)atts[i], "xlink:href"))
 						xlink_href = (const char *)atts[i + 1];
-					else if (!strcmp ((char *)atts[i], "gradientTransform")) {
+					else if (!strcmp ((char *)atts[i], "gradientTransform"))
 						got_transform = rsvg_parse_transform (affine, (const char *)atts[i + 1]);
+					else if (!strcmp ((char *)atts[i], "gradientUnits")) {
+						obj_bbox = (strcmp ((char *)atts[i+1], "objectBoundingBox") == 0);
+						got_bbox = TRUE;
 					}
 				}
 		}
@@ -485,6 +489,7 @@ rsvg_start_linear_gradient (RsvgHandle *ctx, const xmlChar **atts)
 		art_affine_multiply (grad->affine, affine, grad->affine);
 	
 	/* state inherits parent/cloned information unless it's explicity gotten */
+	grad->obj_bbox = (cloned && !got_bbox) ? grad->obj_bbox : obj_bbox;
 	grad->x1 = (cloned && !got_x1) ? grad->x1 : x1;
 	grad->y1 = (cloned && !got_y1) ? grad->y1 : y1;
 	grad->x2 = (cloned && !got_x2) ? grad->x2 : x2;
@@ -513,10 +518,11 @@ rsvg_start_radial_gradient (RsvgHandle *ctx, const xmlChar **atts, const char * 
 	double cx = 0., cy = 0., r = 0., fx = 0., fy = 0.;  
 	const char * xlink_href = NULL;
 	ArtGradientSpread spread = ART_GRADIENT_PAD;
-	gboolean got_cx, got_cy, got_r, got_fx, got_fy, got_spread, got_transform, cloned, shallow_cloned;
+	gboolean obj_bbox = TRUE;
+	gboolean got_cx, got_cy, got_r, got_fx, got_fy, got_spread, got_transform, got_bbox, cloned, shallow_cloned;
 	double affine[6];
 	
-	got_cx = got_cy = got_r = got_fx = got_fy = got_spread = got_transform = cloned = shallow_cloned = FALSE;
+	got_cx = got_cy = got_r = got_fx = got_fy = got_spread = got_transform = got_bbox = cloned = shallow_cloned = FALSE;
 	
 	/* setup defaults */
 	cx = rsvg_css_parse_normalized_length ("50%", ctx->dpi, (gdouble)ctx->width, state->font_size);
@@ -572,6 +578,10 @@ rsvg_start_radial_gradient (RsvgHandle *ctx, const xmlChar **atts, const char * 
 								got_spread = TRUE;
 							}
 						}
+					else if (!strcmp ((char *)atts[i], "gradientUnits")) {
+						obj_bbox = (strcmp ((char *)atts[i+1], "objectBoundingBox") == 0);
+						got_bbox = TRUE;
+					}
 				}
 		}
 	
@@ -613,6 +623,7 @@ rsvg_start_radial_gradient (RsvgHandle *ctx, const xmlChar **atts, const char * 
 		art_affine_multiply (grad->affine, affine, grad->affine);
 	
 	/* state inherits parent/cloned information unless it's explicity gotten */
+	grad->obj_bbox = (cloned && !got_bbox) ? grad->obj_bbox : obj_bbox;
 	grad->cx = (cloned && !got_cx) ? grad->cx : cx;
 	grad->cy = (cloned && !got_cy) ? grad->cy : cy;
 	grad->r =  (cloned && !got_r)  ? grad->r  : r;
